# ResearchTeamProjectFinder

./: .gitignore  README.md  app.py  pyproject.toml
data/rdf/: ontology.ttl
src/dblp_source/: dblp.py
src/docker/context7/: README.md
src/python/: app.py  main.py
src/python/crossref_source/: crossref.py
src/python/dblp_source/: dblp.py
src/python/github_source/: github.py
src/python/gitlab_source/: gitlab.py
src/python/hal_source/: hal.py
src/python/kg/: CONSTANTS.py  knowledge.py
src/python/paper_with_code_source/: paper_with_code.py
src/python/postprocessing/: postprocess.py
src/python/util/: utilities.py
