[project]
name = "researchteamprojectfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "habanero>=2.3.0",
    "pygithub>=2.6.1",
    "python-gitlab>=6.0.0",
    "rdflib>=7.1.4",
    "semanticscholar>=0.10.0",
    "sparqlwrapper>=2.0.0",
]
